--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
+    "google-map-react": "^2.2.5",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.18",
