--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@mui/x-date-pickers": "^8.5.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "google-map-react": "^2.2.5",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
@@ -22,6 +24,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.57.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
